# imputation-paper

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: tail-extension-options.md
paper/: index.qmd  macros.tex
paper/bibliography/: references.bib
paper/sections/: abstract.tex  background.tex  conclusion.tex  data.tex  disclosures.tex  discussion.tex  introduction.tex  methodology.tex  results.tex
paper/tables/: ablations.tex  cps_components.tex  fragility.tex  harness.tex  harness_scale.tex  openml.tex  scf_wealth.tex
runs/cps-components/: manifest.json  metrics_long.csv
runs/openml-abalone/: manifest.json  metrics_long.csv
runs/openml-brazilian_houses/: manifest.json  metrics_long.csv
runs/openml-elevators/: manifest.json  metrics_long.csv
runs/openml-house_sales/: manifest.json  metrics_long.csv
runs/openml-onlinenewspopularity/: manifest.json  metrics_long.csv
runs/openml-space_ga/: manifest.json  metrics_long.csv
runs/scf-to-cps-harness/: harness_long.csv  manifest.json
runs/scf-to-cps-harness-scale/: harness_long.csv  manifest.json
runs/scf-wealth/: manifest.json  metrics_long.csv
src/imputation_paper/: __init__.py  methods.py  smoke.py
src/imputation_paper/cli/: __init__.py  demo.py  figures.py  harness.py  sweep.py  tables.py
src/imputation_paper/data/: __init__.py  base.py  cps.py  openml.py  scf.py  sipp.py
src/imputation_paper/experiments/: __init__.py  conditions.py  holdout.py  metrics.py  views.py
tests/: test_adapters.py  test_data.py  test_smoke.py  test_views.py
