[project]
name = "imputation-paper"
version = "0.1.0"
description = "Paper and benchmarks for populace's weight-aware imputation approach"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2",
    "pandas>=2.3",
    "scipy>=1.13",
    # The classifier two-sample test and PRDC run in CI's base install, so the
    # metric layer's ML dependency lives here rather than behind an extra.
    "scikit-learn>=1.5",
]

[project.scripts]
imp = "imputation_paper.cli:main"

[project.optional-dependencies]
# The candidate method and every benchmark it is compared against. Kept out of
# the base install so CI (and anyone who only wants the toy harness) does not
# have to resolve the git dependencies or their transitive stacks. `methods.py`
# imports each package lazily inside its constructor, so the registry can be
# imported and listed without any of these installed.
methods = [
    # The subject of the paper: populace-fit's regime-gated, chained, weighted
    # QRF, plus the Frame it fits over. Git deps against the populace monorepo
    # subdirectories (populace is not yet on PyPI).
    # Pinned to the DataFrame-front-door commit (populace#290); repoint to a
    # main SHA once that PR merges.
    "populace-fit @ git+https://github.com/PolicyEngine/populace.git@71b5a83b433195748e62178b34f299b065a21b37#subdirectory=packages/populace-fit",
    "populace-frame @ git+https://github.com/PolicyEngine/populace.git@71b5a83b433195748e62178b34f299b065a21b37#subdirectory=packages/populace-frame",
    # Survey-imputation baselines: plain QRF, OLS, quantile regression, and the
    # matching imputer, under one interface.
    "microimpute>=1,<2",
    # Nearest-neighbour-distance hot-deck statistical matching (a Python port of
    # R's StatMatch), the classical data-fusion baseline.
    # Pinned to the packaging-fix commit (py-statmatch#12); repoint to a main
    # SHA once that PR merges.
    "py-statmatch @ git+https://github.com/CosilicoAI/py-statmatch.git@094a242b9ecaafd08676b4b00d304c4116662dbf",
]
viz = [
    # Figures for the sweep. matplotlib exports vector PDF/SVG for LaTeX natively
    # (no headless-Chrome dependency); see `imp figures`.
    "matplotlib>=3.8",
]
# Real-data loaders for the paper's tasks (SCF, CPS, OpenML). Kept out of the
# base install so CI (which never downloads real microdata) resolves without
# them; the loaders in `data/` import huggingface_hub/h5py lazily inside their
# bodies, so the registry imports on the base install and only a called loader
# raises if its extra is absent. scikit-learn (fetch_openml) is already a base
# dependency, so it is not repeated here.
data = [
    # Pulls the raw CPS h5 (never the enhanced CPS) from the PolicyEngine data
    # repo on the Hugging Face Hub.
    "huggingface_hub>=0.24",
    # Reads the PolicyEngine h5 microdata (variable/period-keyed datasets).
    "h5py>=3.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["imputation_paper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# The `methods` extra pins populace-fit/populace-frame and py-statmatch as git
# URLs (none are on PyPI yet); hatchling refuses direct references by default.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imputation_paper"]
